fixed bugged with sync basker with local offline and online user, fixed ui problem when nav was open to insta close when we click on mobile

--- a/ymagyn/src/components/Products/ProductItem.module.css
+++ b/ymagyn/src/components/Products/ProductItem.module.css
@@ -1,5 +1,9 @@
   .card-text {
-    height: 7rem; 
+    height: 10rem;
     overflow: hidden;
   }
-  
+
+  .card-body {
+    height: 5rem;
+    overflow: hidden;
+  }
